update file paths

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="import" href="../bower_components/ascii-heart/ascii-heart.html">
-    <link rel="import" href="../bower_components/ascii-smile/ascii-smile.html">
-    <link rel="import" href="../bower_components/ascii-carmen-smile/ascii-carmen-smile.html">
-    <link rel="import" href="../bower_components/ascii-hug/ascii-hug.html">
-    <link rel="import" href="../bower_components/ascii-hello/ascii-hello.html">
-    <link rel="import" href="../bower_components/ascii-shrug/ascii-shrug.html">
-    <link rel="import" href="../bower_components/ascii-eyebrow/ascii-eyebrow.html">
-    <link rel="import" href="../bower_components/ascii-confused/ascii-confused.html">
-    <link rel="import" href="../bower_components/paper-styles/paper-styles.html">
-    <link rel="import" href="../bower_components/super-presentation/super-presentation.html">
-    <link rel="import" href="../bower_components/super-presentation/super-slide.html">
-    <link rel="import" href="../bower_components/akyral-code/akyral-code.html">
+    <link rel="import" href="bower_components/ascii-heart/ascii-heart.html">
+    <link rel="import" href="bower_components/ascii-smile/ascii-smile.html">
+    <link rel="import" href="bower_components/ascii-carmen-smile/ascii-carmen-smile.html">
+    <link rel="import" href="bower_components/ascii-hug/ascii-hug.html">
+    <link rel="import" href="bower_components/ascii-hello/ascii-hello.html">
+    <link rel="import" href="bower_components/ascii-shrug/ascii-shrug.html">
+    <link rel="import" href="bower_components/ascii-eyebrow/ascii-eyebrow.html">
+    <link rel="import" href="bower_components/ascii-confused/ascii-confused.html">
+    <link rel="import" href="bower_components/paper-styles/paper-styles.html">
+    <link rel="import" href="bower_components/super-presentation/super-presentation.html">
+    <link rel="import" href="bower_components/super-presentation/super-slide.html">
+    <link rel="import" href="bower_components/akyral-code/akyral-code.html">
     
-    <link rel="stylesheet" href="../bower_components/highlightjs/styles/zenburn.css">
+    <link rel="stylesheet" href="bower_components/highlightjs/styles/zenburn.css">
     <link rel="stylesheet" href="styles.css">
     
     <style is="custom-style">
